<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JWPepperDownloader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to JWPepper Downloader</string>
    <string name="insertID">Insert the ID of the song here</string>
    <string name="insertname">Please enter the name of the song</string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="browse">Browse</string>
    <string name="search">Search</string>
    <string name="page">Page#</string>
    <string name="results"># results</string>

</resources>